--- a/src/SolThoth.PublicProfile.Website/SolThoth.PublicProfile.Website.csproj
+++ b/src/SolThoth.PublicProfile.Website/SolThoth.PublicProfile.Website.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SolThoth.PublicProfile.SharedTypes\SolThoth.PublicProfile.SharedTypes.csproj" />
+    <ProjectReference Include="..\SolThoth.PublicProfile.DataAccess\SolThoth.PublicProfile.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
